# identity

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-deploy.yml  lint-test.yml
src/: config.rs  database.rs  error.rs  extract.rs  health.rs  http.rs  mail.rs  mailer.rs  main.rs  model.rs  state.rs  utils.rs
src/action/: filter.rs  handler.rs  mod.rs  routes.rs
src/auth/: mod.rs  password.rs
src/auth/password/: hibp.rs  mod.rs
src/auth/token/: mod.rs  sign.rs  verify.rs
src/authentication/: mod.rs  password.rs  token.rs
src/client/: handler.rs  mod.rs  model.rs  routes.rs
src/crypto/: aead.rs  cert.rs  gen.rs  hash.rs  mod.rs
src/oauth/: handler.rs  mod.rs
src/service/: filter.rs  handler.rs  mod.rs  model.rs  routes.rs
src/services/: error.rs  extract.rs  mod.rs  model.rs  routes.rs
src/services/action/: handler.rs  mod.rs  routes.rs
src/services/client/: handler.rs  mod.rs  model.rs  routes.rs
src/services/health/: handler.rs  mod.rs  routes.rs
src/services/oauth/: handler.rs  mod.rs  routes.rs
src/services/service/: handler.rs  mod.rs  model.rs  routes.rs
src/services/session/: handler.rs  mod.rs  routes.rs
src/services/sso/: github.rs  mod.rs  oauth.rs  routes.rs
src/services/token/: handler.rs  mod.rs  routes.rs
src/services/user/: handler.rs  mod.rs  model.rs  routes.rs
src/session/: filter.rs  handler.rs  mod.rs  routes.rs
src/sso/: github.rs  mod.rs  oauth.rs  routes.rs
src/token/: filter.rs  handler.rs  mod.rs  routes.rs
src/user/: filter.rs  handler.rs  mod.rs  model.rs
src/utils/: crypto.rs  mod.rs  serde.rs  validation.rs
