[package]
name = "identity-server"
version = "0.1.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jemalloc"]

jemalloc = ["jemallocator"]

[dependencies]
jemallocator = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
tower = { version = "0.4", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.2.0", features = [
    "add-extension",
    "trace",
    "sensitive-headers",
] }
axum = { version = "0.4", features = ["headers"] }
reqwest = { version = "0.11", features = [
    "json",
    "trust-dns",
    "rustls-tls",
], default-features = false }
http = "0.2"
headers = "0.3"
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.1.0", features = ["bson-chrono-0_4"] }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
argon2 = "0.4"
aes-gcm-siv = "0.10"
rand = { version = "0.8", features = ["std"] }
sha-1 = "0.10"
base64 = "0.13"
jsonwebtoken = "8"
passwords = "3"
envy = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[profile.release]
lto = true
opt-level = 3
debug = false
