[package]
name = "identity-server"
version = "0.1.0"
authors = ["Markus Wiegand <mail@morphy2k.dev>"]
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jemalloc"]

jemalloc = ["jemallocator"]

[dependencies]
jemallocator = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = [
  "async-await",
] }
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
tower = { version = "0.4", features = [
  "util",
  "timeout",
  "load-shed",
  "limit",
] }
tower-http = { version = "0.4", features = [
  "add-extension",
  "trace",
  "sensitive-headers",
] }
axum = { version = "0.6", default-features = false, features = [
  "json",
  "matched-path",
  "original-uri",
  "query",
  "tokio",
  "tower-log",
  "headers",
] }
reqwest = { version = "0.11", features = [
  "json",
  "trust-dns",
  "rustls-tls",
], default-features = false }
http = "0.2"
headers = "0.3"
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
mongodb = { version = "2.6", default-features = false, features = [
  "tokio-runtime",
  "bson-chrono-0_4",
  "bson-uuid-1",
  "tracing-unstable",
] }
envy = "0.4"
dotenv = "0.15"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-subscriber = { version = "0.3", features = [
  "std",
  "fmt",
  "tracing-log",
  "smallvec",
  "parking_lot",
  "env-filter",
  "ansi",
  "json",
], default-features = false }
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
regex = "1"

# Crypto
password-hash = "0.5"
argon2 = { version = "0.5", features = ["std"] }
rand = { version = "0.8", features = ["std"] }
sha-1 = "0.10"
base64ct = { version = "1", features = ["std"] }
base16ct = { version = "0.2", features = ["std"] }
aes-gcm-siv = { version = "0.11", features = [
  "aes",
  "std",
  # "arrayvec",
], default-features = false }
pki-rs = { git = "https://github.com/morphy2k/pki-rs", tag = "v0.1.0-alpha.1", features = [
  "ed25519",
  "fingerprint",
], default-features = false }
jsonwebtoken = { version = "8.3", default-features = false }
passwords = { version = "3", default-features = false }
rustls-pemfile = "1"

[profile.release]
lto = true
opt-level = 3
debug = false
strip = "debuginfo"
